css/styles.css
html {
	box-sizing: border-box;
}

*,
*:before,
*:after {
	box-sizing: inherit;
}

* {
	margin: 0;
	padding: 0;
}

/* General CSS */
.icon {
	overflow: visible;
}
.d-flex {
	display: flex;
	align-items: center;
}
body {
	font-family: 'Poiret one', sans-serif;
	--main-bg-color: #0b132b;
	--secondary-bg-color: #3a506b;
	--highlight-color: #5bc0be;
	z-index: 1;
	background: #fff;
	font-weight:900;
	color: #0b132b;
}
.heading {
	color: #47505a;
	font-family: "Lato", sans-serif;
	margin-left: 16px;
}
.pt-1half {
	padding-top: 1.5em;
}
.pb-2 {
	padding-bottom: 2em;
}
.two-sections {
	flex-direction: column;
}
.two-sections section {
	border-bottom: 1px solid #ccc;
	width: 100%;
}
.two-sections section:last-child {
	border-left: 1px solid #ccc;
}
input {
	text-indent: 10px;
}
/* Layout */

/* GRID CSS */
.container {
	box-sizing: border-box;
	display: -ms-grid;
	display: grid;

	grid-template-areas:
		'header header'
		'sidebar main';
	grid-template-columns: 70px 1fr;
	-ms-grid-columns: 70px 1fr;
	grid-template-rows: 150px 1fr;
	-ms-grid-rows: 150px 1fr;
}
header {
	-ms-grid-row: 1;
	-ms-grid-column: 1;
	-ms-grid-column-span: 2;
	grid-row: 1;
	grid-column: 1;
	grid-row-start: 1;
	background: var(--secondary-bg-color);
	background: #3a506b;
	grid-area: header;
	text-align: center;
}

#sidebar {
	-ms-grid-row: 2;
	-ms-grid-column: 1;
	grid-row: 2;
	grid-column: 1;
	grid-area: sidebar;
	min-height: 100vh;
}

main {
	-ms-grid-row: 2;
	-ms-grid-column: 2;
	grid-row: 2;
	grid-column: 2;
	grid-area: main;
}

/* Main Content */
.main-content-wrapper {
	max-width: 1200px;
	margin: 0 auto;
}
/* Header */

.main-nav {
	padding: 5px 10px;
}
.title {
	color: #fff;
	font-family: 'Righteous', cursive;
	text-shadow: 0px 0px 3px #1c2541;
	font-weight: 200;
}
.user-links {
	display: flex;
	align-items: center;
	justify-content: center;
}
.user-links .icon {
	border-right: 1px solid #1c2541;
	color: #fff;
	width: 50px;
	height: 35px;
	padding-right: 25px;
	margin-right: 10px;
}
.user--image {
	border-radius: 50%;
	height: auto;
	margin-right: 10px;
	width: 40px;
}

.user--name {
	font-family: 'Poiret One', cursive;
	color: #5bc0be;
	color: var(--highlight-color);
}

/* Sidebar */
#sidebar {
	width: 70px;
	background: var(--main-bg-color);
	background: #0b132b;
	flex-direction: column;
}

.sidebar-icons {
	width: 25px;
	height: 25px;
}

.active-icon {
	color: #fff;
}
.active-icon rect {
	color: #5bc0be;
	color: var(--highlight-color);
}
#sidebar svg {
	cursor: pointer;
	transition: ease-out 0.2s;
}
#sidebar svg:first-child {
	margin-top: 25px;
}
#sidebar svg:not(:first-child) {
	margin-top: 30px;
	color: #3a506b;
}
#sidebar svg:hover {
	color: #5bc0be;
}

/* TOP */
#top {
	align-items: center;
	background-color: #f1f1f1;
	border-bottom: 1px solid #ccc;
	height: 40px;
	justify-content: space-between;
}
.top-title {
	background: #fff;
	border-right: 1px solid #ccc;
	font-family: 'Poiret one', sans-serif;
	cursor: pointer;
	font-size: 1.1em;
	padding: 10.2px 16px;
}
.searchbox {
	border-radius: 5px;
	background: #fff url('../svg/search.svg') right 11px center no-repeat;
	background-size: 10px;
	max-width: 225px;
	margin-left: 5px;
	margin-right: 10px;
	width: 50%;
	border: #ccc 1px solid;
}
/* Remove x button */
input[type='search']::-webkit-search-decoration,
input[type='search']::-webkit-search-cancel-button,
input[type='search']::-webkit-search-results-button,
input[type='search']::-webkit-search-results-decoration {
	-webkit-appearance: none;
}
::placeholder {
	color: #ccc;
	font-size: 11px;
}
/* Demo Alert CSS */

.alert {
	background: var(--main-bg-color);
	background: #3a506b;
	color: #fff;
	border-radius: 5px;
	justify-content: space-between;
	margin: 25px auto 0 auto;
	padding: 9px 5px;
	width: 95%;
}
.alert p:not(b) {
	font-size: 0.7em;
}
.cancel {
	cursor: pointer;
	color: #fff;
	margin: 0 0.5em;
	fill: currentColor;
	transition: color ease-out 0.2s;
}
.cancel:hover {
	color: #000;
}
.bell {
	cursor: pointer;
	color: #fff;
}
.bell-icon {
	transform-origin: 50% 50%;
	transition: color ease-out 0.2s;
}
.bell:hover .bell-icon {
	color: var(--highlight-color);
	color: #5bc0be;
}

/* Chart styles */
.chart-container {
	width: 100%;
	margin: 25px auto 0 auto;
	color: #47505a;
}

.chart-container canvas {
	margin: 0 auto;
	margin-top: 30px;
	width: 90% !important;
	height: auto;
}
/* LineChart */

#web-traffic {
	border-bottom: 1px #ccc solid;
}
#lineChart {
	height: auto;
	max-width: 900px;
}
.lineChart-labels {
	justify-content: space-between;
	flex-direction: column;
	align-items: flex-start;
}
.time-options {
	list-style-type: none;
	margin-top: 25px;
	margin-left: 16px;
	font-size: 0.8em;
	flex-wrap: wrap;
}
.time-options li {
	cursor: pointer;
}
.time-options li:not(:last-child) {
	margin-right: 1.5em;
}

.active {
	background: #5bc0be;
	color: white;
	padding: 5px;
	border-radius: 25px;
}

/* Pie and Bar */

.bar-and-pie {
	flex-direction: column;
	align-items: initial;
}

/* Social */
#social-stats {
	border-bottom: 1px #ccc solid;
}
.social-container svg {
	color: #fff;
	margin: 0 15px;
	transition: 0.2s ease-out;
	width: 40px;
}
.social-container {
	flex-direction: column;
	justify-content: space-between;
	margin: 0 auto;
	width: 95%;
}

/* New Users and */
div[class^='social-stats'] {
	background: rgb(241, 240, 240);
	border: 1px #ccc solid;
	border-radius: 5px;
	color: #1c2541;
	padding: 15px 10px;
	height: 100px;
	min-width: 220px;
	max-width: 275px;
	margin-bottom: 25px;
	width: 100%;
}

.stats-text {
	flex-direction: column;
	align-items: flex-start;
	align-content: space-between;
}
.stats-text h3 {
	margin-bottom: 5px;
	color: #3a506b;
}
.stats-text span {
	font-size: 2em;
}

/* Bottom-Section */

.bottom-section {
	color: #47505a;
}
.bottom-section section {
	padding: 15px 0;
}
.bottom-section h5 {
	margin-top: 6px;
}
/* New User/Activity */
.new-users,
.new-activity {
	border-left: 0;
	border-bottom: 1px solid #ccc;
}
.new-user,
.activity {
	padding: 5px;
	flex-direction: column;
	border-bottom: 1px solid #ccc;
	width: 90%;
	min-height: 100px;
	margin: 0 auto;
}
.new-user:last-child,
.activity:last-child {
	border: 0;
}

.user--info,
.user--activity {
	flex-direction: column;
	padding: 10px 0;
}
.user--info a,
.user--activity em {
	padding-top: 5px;
}
.left-arrow {
	font-size: 2em;
	display: none;
}
.activity,
.new-user {
	cursor: pointer;
	transition: ease-out background 0.3s;
}
.new-user:hover,
.activity:hover {
	background: #eee;
}

.form {
	flex-direction: column;
	align-items: flex-start;
	padding: 25px;
}
.form input {
	width: 100%;
}
.message-recipient {
	margin-bottom: 0.5em;
}
.message {
	height: 150px;
}
.message-submit {
	margin-top: auto;
	color: #fff;
	background: #3a506b;
	border: none;
	border-radius: 5px;
	height: 50px;
	text-transform: uppercase;

}

.switch-settings {
	align-items: flex-start;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	max-width:325px;
	width:100%;
}
.switch-settings{
	margin-bottom:2em;
}

.onoffswitch{
	margin-top:1em;
}
.timezone-setting{
	height:30px;
	width:100%;
	margin-top:auto;
	margin-bottom:auto;
}
.settings-buttons{
	flex-direction: column;
width:100%;
justify-content: space-between;
}
.btn-save{
	background: #3a506b;
}

.btn-save,.btn-cancel{
	border: none;
	border-radius: 5px;
	color:#fff;
	margin:8px 0;
	height: 50px;
	text-transform: uppercase;
	width:100%
}
/* Media Queries */
@media (min-width: 1024px) {
}

@media (min-width: 768px) {
	#mobile-users,
	#daily-traffic {
		border-bottom: 0;
	}
	.bar-and-pie {
		flex-direction: row;
		align-items: center;
		border-bottom: 1px solid #ccc;
	}

	#daily-traffic {
		border-left: 0;
	}
	#mobile-users {
		border-left: 1px solid #ccc;
	}
	/* Social */
	.social-container {
		color: #1c2541;
		flex-direction: row;
	}
	div[class^='social-stats'] {
		width: 25% !important;
	}
	.two-sections {
		flex-direction: row;
	}
	.d-grid {
		display: grid;
		display: -ms-grid;
	}
	.bottom-section {
		-ms-grid-columns: 1fr 1fr;
		grid-template-columns: repeat(2, 1fr);
		grid-template-rows: 1fr 400px;
	}
	.new-users {
		-ms-grid-row: 1;
		-ms-grid-column: 1;
		border-right: 1px solid #ccc;
	}
	.new-activity {
		-ms-grid-row: 1;
		-ms-grid-column: 2;
	}
	.user-form {
		-ms-grid-row: 2;
		-ms-grid-column: 1;
	}
	.user-settings {
		-ms-grid-row: 2;
		-ms-grid-column: 2;
	}
}
@media (min-width: 512px) {
	.container {
		grid-template-rows: 75px 1fr !important;
		-ms-grid-rows: 75px 1fr !important;
	}

	.main-nav {
		align-items: center;
		display: flex;
		padding-top: 20px;
		justify-content: space-between;
	}

	.title {
		margin: 0;
	}
	.col-md-2 {
		width: 50%;
	}
}

@media (min-width: 400px) {
	.time-options {
		margin-top: 0;
		margin-right: 20px;
	}
	.lineChart-labels {
		flex-direction: row;
		margin: 0;
	}
	.new-user,
	.activity {
		flex-direction: row;
	}
	.user--info,
	.user--activity {
		align-items: flex-start;
	}
	.activity span {
		margin-right: 15px;
	}
	.date,
	.left-arrow {
		margin-left: auto;
	}
	.left-arrow {
		display: block;
	}
	.user--activity {
		font-size: 0.9em;
	}
	.form{	height: 300px;
	}
	.switch-settings{
		flex-direction: row;
	}
	.settings-buttons{
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	vertical-align: bottom;
	}
	.onoffswitch{
		margin:0;
	}
	.settings-buttons button{
		width:45%;
		margin:0;
	}
	
}

